--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,8 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	font-family: 'Noto Sans KR', sans-serif;
+	letter-spacing: -1 px;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
